--- a/index.html
+++ b/index.html
@@ -30,13 +30,8 @@
 				<li>Squash</li>
 				<li>Toms</li>
 			</ol>
-		<!-- <h3>Be Sociable</h3>
-			<ul>
-				<li> <a href="https://twitter.com/BeccaLizFergie">Twitter</a> </li>
-				<li> <a href="https://www.instagram.com/beccalizfergie/">IG</a> </li>
-			</ul> -->
 	</section>	
-	<script src="http://code.jquery.com/jquery.js"></script> <!-- Do not need to include type with HTML5-->
+	<script src="https://code.jquery.com/jquery.js"></script> <!-- Do not need to include type with HTML5-->
 	<script src="js/main.js"></script>
 	</body>
 
